<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="action_settings">Settings</string>
    <string name="crime_title_hint">Enter a title  for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved?</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="crime_title">Crime Title</string>
    <string name="crime_date">Crime Date</string>
    <string name="call_police">call Police</string>
</resources>
